# soavec

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  soavec_api.rs
soavec/: Cargo.toml
soavec/src/: lib.rs  macros.rs  raw_vec.rs  raw_vec_inner.rs  soable.rs
soavec_derive/: Cargo.toml
soavec_derive/src/: lib.rs  soa_enum.rs  soa_struct.rs  soable.rs
soavec_derive/tests/: integration.rs
