[package]
name = "soavec-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
syn = { version = "2.0", features = ["full"] }
arbitrary = { version = "1.0", features = ["derive"] }
quote = "1.0"
proc-macro2 = "1.0"
soavec = { path = "../soavec" }
soavec_derive = { path = "../soavec_derive" }

[[bin]]
name = "soavec_api"
path = "fuzz_targets/soavec_api.rs"
test = false
doc = false
bench = false
