[package]
name = "soavec"
version = "0.1.0"
edition = "2024"

[features]
default = []
derive = ["soavec_derive"]

[dependencies]
soavec_derive = { path = "../soavec_derive", optional = true }

[dev-dependencies]
soavec_derive = { version = "0.1.0", path = "../soavec_derive" }

[target.'cfg(any())'.dependencies]
soavec_derive = { version = "=0.1.0", path = "../soavec_derive" }
