[package]
name = "soavec_derive"
repository = "https://github.com/trynova/soavec/tree/main/soavec_derive"
description = "Macro implementation of #[derive(SoAble)]"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
soavec = { path = "../soavec" }
